--- a/versionConfigLib.gradle
+++ b/versionConfigLib.gradle
@@ -1,32 +1,100 @@
 //配置强制版本信息
 ext.libVersionConfig = [
-//        "org.jetbrains.kotlin:kotlin-stdlib"              : "1.3.61",
-//        "org.jetbrains.kotlin:kotlin-stdlib-common"       : "1.3.61",
+        //https://mvnrepository.com/artifact/androidx.annotation
+        "androidx.annotation:annotation"      : "1.3.0",
 
-        "androidx.core:core"                              : "1.6.0",
-        "androidx.core:core-ktx"                          : "1.6.0",
-        "androidx.annotation:annotation"                  : "1.1.0",
-        "androidx.fragment:fragment"                      : "1.4.1",
-        "androidx.appcompat:appcompat"                    : "1.3.1",
-        "androidx.arch.core:core-common"                  : "2.1.0",
-        "androidx.arch.core:core-runtime"                 : "2.1.0",
-        "androidx.collection:collection"                  : "1.1.0",
-        "androidx.coordinatorlayout:coordinatorlayout"    : "1.1.0",
-        "androidx.recyclerview:recyclerview"              : "1.2.0",
-        "androidx.transition:transition"                  : "1.3.1",
-        "androidx.loader:loader"                          : "1.1.0",
-        "androidx.exifinterface:exifinterface"            : "1.1.0",
+        //https://mvnrepository.com/artifact/androidx.appcompat
+        "androidx.appcompat:appcompat"        : "1.4.1",
 
-        "androidx.lifecycle:lifecycle-common"             : "2.3.1",
-        "androidx.lifecycle:lifecycle-runtime"            : "2.3.1",
-        "androidx.lifecycle:lifecycle-livedata"           : "2.3.1",
-        "androidx.lifecycle:lifecycle-livedata-core"      : "2.3.1",
-        "androidx.lifecycle:lifecycle-viewmodel"          : "2.3.1",
+        //https://mvnrepository.com/artifact/androidx.loader
+        "androidx.loader:loader"              : "1.1.0",
 
-        "com.google.code.gson:gson"                       : "2.8.5",
-
-        "com.squareup.okhttp3:okhttp"                     : "4.8.1",
-
-        "org.jetbrains.kotlinx:kotlinx-coroutines-core"   : "1.6.0",
-        "org.jetbrains.kotlinx:kotlinx-coroutines-android": "1.6.0",
+        //https://mvnrepository.com/artifact/androidx.exifinterface
+        "androidx.exifinterface:exifinterface": "1.3.3",
 ]
+
+def fragment = "1.4.1"
+ext.libVersionConfig << [
+        //"org.jetbrains.kotlin:kotlin-stdlib"              : "1.3.61",
+        //"org.jetbrains.kotlin:kotlin-stdlib-common"       : "1.3.61",
+
+        //https://mvnrepository.com/artifact/androidx.fragment
+        "androidx.fragment:fragment"    : fragment,
+        "androidx.fragment:fragment-ktx": fragment,
+]
+
+def activity = "1.4.0"
+ext.libVersionConfig << [
+        //https://mvnrepository.com/artifact/androidx.activity/
+        "androidx.activity:activity"    : activity,
+        "androidx.activity:activity-ktx": activity,
+]
+
+def core = "1.7.0"
+ext.libVersionConfig << [
+        //https://mvnrepository.com/artifact/androidx.core
+        "androidx.core:core"    : core,
+        "androidx.core:core-ktx": core,
+]
+
+def core_common = "2.1.0"
+ext.libVersionConfig << [
+        //https://mvnrepository.com/artifact/androidx.arch.core
+        "androidx.arch.core:core-common" : core_common,
+        "androidx.arch.core:core-runtime": core_common,
+]
+
+def collection = "1.2.0"
+ext.libVersionConfig << [
+        //https://mvnrepository.com/artifact/androidx.collection
+        "androidx.collection:collection"    : collection,
+        "androidx.collection:collection-ktx": collection,
+]
+
+def transition = "1.4.1"
+ext.libVersionConfig << [
+        //https://mvnrepository.com/artifact/androidx.transition
+        "androidx.transition:transition"    : transition,
+        "androidx.transition:transition-ktx": transition,
+]
+
+def lifecycle = "2.4.1"
+ext.libVersionConfig << [
+        //https://mvnrepository.com/artifact/androidx.lifecycle
+        "androidx.lifecycle:lifecycle-common"           : lifecycle,
+        "androidx.lifecycle:lifecycle-runtime"          : lifecycle,
+        "androidx.lifecycle:lifecycle-livedata"         : lifecycle,
+        "androidx.lifecycle:lifecycle-livedata-ktx"     : lifecycle,
+        "androidx.lifecycle:lifecycle-livedata-core"    : lifecycle,
+        "androidx.lifecycle:lifecycle-livedata-core-ktx": lifecycle,
+        "androidx.lifecycle:lifecycle-viewmodel"        : lifecycle,
+        "androidx.lifecycle:lifecycle-viewmodel-ktx"    : lifecycle,
+        "androidx.lifecycle:lifecycle-process"          : lifecycle,
+]
+
+def kotlinx = "1.6.0"
+ext.libVersionConfig << [
+        //https://mvnrepository.com/artifact/org.jetbrains.kotlinx
+        "org.jetbrains.kotlinx:kotlinx-coroutines-core"   : kotlinx,
+        "org.jetbrains.kotlinx:kotlinx-coroutines-android": kotlinx,
+]
+
+ext.libVersionConfig += [
+
+        //https://mvnrepository.com/artifact/androidx.coordinatorlayout
+        "androidx.coordinatorlayout:coordinatorlayout": "1.2.0",
+
+        //https://mvnrepository.com/artifact/androidx.recyclerview
+        "androidx.recyclerview:recyclerview"          : "1.2.0",
+
+        //https://mvnrepository.com/artifact/com.google.code.gson
+        "com.google.code.gson:gson"                   : "2.8.9", //2.9.0
+
+        //https://mvnrepository.com/artifact/com.squareup.okhttp3
+        "com.squareup.okhttp3:okhttp"                 : "4.9.3",
+
+        //https://mvnrepository.com/artifact/com.google.android.material/material
+        "com.google.android.material:material"        : "1.5.0",
+]
+
+
