--- a/aliyunOss.gradle
+++ b/aliyunOss.gradle
@@ -167,7 +167,7 @@ task _aliyunOssUpload(group: 'angcyo', description: '上传文件到阿里云OSS
 def findApkFile(String folderPath = null) {
     def path
     if (folderPath == null || folderPath.isEmpty()) {
-        project.hasProperty("apk_path") ? project.ext.apk_path : ".apk"
+        path = project.hasProperty("apk_path") ? project.ext.apk_path : ".apk"
     } else {
         path = folderPath
     }
