--- a/qiniu.gradle
+++ b/qiniu.gradle
@@ -237,7 +237,7 @@ task _qiniuUpload(group: 'angcyo', description: '上传文件到七牛云') {
 def findApkFile(String folderPath = null) {
     def path
     if (folderPath == null || folderPath.isEmpty()) {
-        project.hasProperty("apk_path") ? project.ext.apk_path : ".apk"
+        path = project.hasProperty("apk_path") ? project.ext.apk_path : ".apk"
     } else {
         path = folderPath
     }
