--- a/libBase.gradle
+++ b/libBase.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'maven-publish'
 
-def C_SDK = 29
+def C_SDK = 31
 def M_SDK = 21
-def T_SDK = 29
+def T_SDK = 31
 def V_CODE = 1
 def V_NAME = "1.0"
 
-def _kotlin_version = project.hasProperty("kotlin_version") ? project.ext.kotlin_version : '1.5.20'
+def _kotlin_version = project.hasProperty("kotlin_version") ? project.ext.kotlin_version : '1.6.21'
 
 def _minify_enabled_debug = project.hasProperty("minify_enabled_debug") ? (project.ext.minify_enabled_debug == "true") : false
 def _use_proguard_debug = project.hasProperty("use_proguard_debug") ? (project.ext.use_proguard_debug == "true") : false
@@ -124,6 +123,7 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.aar'])
 
     //https://jcenter.bintray.com/org/jetbrains/kotlin/kotlin-stdlib-jdk8/
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$_kotlin_version"
@@ -132,91 +132,8 @@ dependencies {
 //apply from: allGradle.version
 //apply from: allGradle.versionForce
 //apply from: allGradle.base
+//apply from: allGradle.publish
 
 apply from: 'https://gitee.com/angcyo/gradle/raw/master/versionForce.gradle'
 apply from: 'https://gitee.com/angcyo/gradle/raw/master/base.gradle'
-
-/// 构建源码jar包
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    archiveClassifier.set('sources')
-}
-task javadoc(type: Javadoc) {
-    //增加编码，这行很重要，如果是windows系统，同时如果在代码中有中文的话，不加这行，上传会报错
-    options.encoding = "utf-8"
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    from javadoc.destinationDir
-    archiveClassifier.set('javadoc')
-}
-
-def libGroupId = project.hasProperty('libGroupId') ? project.property('libGroupId') : 'com.angcyo'
-def versionName = project.hasProperty('libVersionName') ? project.property('libVersionName') : 'master-SNAPSHOT'//'0.0.1'
-def winRepo = project.hasProperty('libWinRepo') ? project.property('libWinRepo') : 'E:/AndroidProjects/maven'
-def macRepo = project.hasProperty('libMacRepo') ? project.property('libMacRepo') : '/Users/angcyo/Project/Android/GithubDemo/maven'
-
-//Executing task 'publish'...
-
-afterEvaluate {
-    publishing {
-
-        //产物收集配置
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                // Applies the component for the release build variant.
-                from components.release
-
-                // You can then customize attributes of the publication as shown below.
-                groupId = libGroupId
-                artifactId = project.name
-                version = versionName
-
-                //artifact javadocJar
-                artifact sourcesJar
-            }
-        }
-
-        //目标仓库配置
-        repositories {
-            maven {
-                // change to point to your repo, e.g. http://my.org/repo
-                //url = 'E:/AndroidProjects/maven'//"$buildDir/repo"
-
-                def os = System.getProperty("os.name").toLowerCase()
-                def path = os.contains("window") ? winRepo : macRepo
-                url = path
-
-                System.err.println(project.name + "->本地Maven路径:${path}")
-            }
-        }
-    }
-}
-
-//bintray {
-//    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-//    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-//
-//    publications = ['release']
-//    configurations = ['archives']
-//
-//    //https://github.com/bintray/gradle-bintray-plugin#buildgradle
-//    pkg {
-//        repo = "maven"
-//        name = "library"   //发布到JCenter上的项目名字
-//        desc = 'create by angcyo.'
-//        //userOrg = "angcyo"
-//        websiteUrl = 'https://github.com/angcyo'
-//        vcsUrl = 'https://github.com/angcyo'
-//        licenses = ["MIT"]
-//        publicDownloadNumbers = true
-//        publish = true
-//
-//        /*version {
-//            name = versionName
-//            desc = 'library ' + versionName
-//        }*/
-//    }
-//}
+apply from: 'https://gitee.com/angcyo/gradle/raw/master/publish.gradle'
