--- a/key.gradle
+++ b/key.gradle
@@ -1,6 +1,6 @@
 //apply from: '../RLibrary/key.gradle'
 
-apply plugin: 'com.android.application'
+//apply plugin: 'com.android.application'
 
 println("key.gradle↓\n项目根路径:" + rootDir.absolutePath)
 println("脚本的路径:" + file(".").absolutePath)
