--- a/apk.gradle
+++ b/apk.gradle
@@ -17,6 +17,8 @@ def apkFormatName = project.hasProperty("apkName") ? project.ext.apkName : "#an-
 def _app_name = project.hasProperty("APP_NAME") ? project.ext.APP_NAME : ((project.name != "app") ? project.name : rootProject.name)
 def apk_time = apkTime()
 
+def keyAlias = project.hasProperty("signConfig") ? signConfig.key_alias : 'unknown'
+
 android {
 
     /*Gradle3.0 以下的方法*/
@@ -53,7 +55,7 @@ android {
                         variant.flavorName,
                         variant.buildType.name,
                         variant.signingConfig.name,
-                        signConfig.key_alias
+                        keyAlias
                 )
             }
         }
@@ -71,7 +73,7 @@ android {
                         variant.flavorName,
                         variant.buildType.name,
                         variant.signingConfig.name,
-                        signConfig.key_alias
+                        keyAlias
                 )
             }
         }
@@ -90,7 +92,7 @@ android {
                         variant.flavorName,
                         variant.buildType.name,
                         variant.signingConfig.name,
-                        signConfig.key_alias
+                        keyAlias
                 )
             }
         }
@@ -110,7 +112,7 @@ android {
                         variant.flavorName,
                         variant.buildType.name,
                         variant.signingConfig.name,
-                        signConfig.key_alias
+                        keyAlias
                 )
             }
         }
