--- a/common.gradle
+++ b/common.gradle
@@ -70,10 +70,10 @@ def findApkFile(String folderPath = null) {
         if (it.isFile()) {
             def name = it.getName()
             if (name.endsWith(".apk")) {
-                if (uploadFileList.contains(name) && files.length > 1) {
+                if (uploadFileList.contains("${name}/${it.lastModified()}") && files.length > 1) {
                     System.out.println '已上传,跳过文件:' + name
                 } else {
-                    isUploadFile.append("${name}\n")
+                    isUploadFile.append("${name}/${it.lastModified()}\n")
                     if (result == null) {
                         result = it.absolutePath
                     } else {
@@ -135,7 +135,6 @@ def copyFile(String from, String toPath) {
         }
     }
 }
-
 
 
 //导出
