--- a/app.gradle
+++ b/app.gradle
@@ -105,44 +105,29 @@ android {
             dimension "flavor"
             minSdkVersion Math.max(Integer.parseInt(_M_SDK), 21)
             buildConfigField "boolean", "SHOW_DEBUG", "true"
+            resValue "bool", "show_debug", "true"
         }
         //preview
         pre {
             dimension "flavor"
             minSdkVersion Integer.parseInt(_M_SDK)
             buildConfigField "boolean", "SHOW_DEBUG", "true"
+            resValue "bool", "show_debug", "true"
         }
         //apk
         apk {
             dimension "flavor"
             minSdkVersion Integer.parseInt(_M_SDK)
+            resValue "bool", "show_debug", "false"
         }
     }
     buildTypes {
-        release {
-            //applicationIdSuffix ".release"
-            initWith debug
-            minifyEnabled _minify_enabled
-            debuggable false
-            jniDebuggable = false
-            crunchPngs = true
-            signingConfig signingConfigs.angcyo
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-        pretest {
-            //applicationIdSuffix ".release"
-            initWith debug
-            minifyEnabled _minify_enabled
-            crunchPngs = true
-            signingConfig signingConfigs.angcyo
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
         debug {
             //applicationIdSuffix ".debug"
             zipAlignEnabled true
             shrinkResources false
             minifyEnabled _minify_enabled_debug
-//            useProguard _use_proguard_debug
+            //useProguard _use_proguard_debug //默认会使用R8压缩优化代码
             signingConfig signingConfigs.angcyo
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             debuggable true
@@ -152,9 +137,22 @@ android {
             ext.enableCrashlytics = false
             ext.alwaysUpdateBuildId = false
         }
+        pretest {
+            //applicationIdSuffix ".pretest"
+            initWith debug
+            minifyEnabled _minify_enabled
+        }
+        release {
+            //applicationIdSuffix ".release"
+            initWith debug
+            minifyEnabled _minify_enabled
+            debuggable false
+            jniDebuggable = false
+            crunchPngs = true
+        }
     }
 
-    if (gradle.gradleVersion.startsWith("6")) {
+    if (gradle.gradleVersion.charAt(0) >= '6') {
         //android.packageBuildConfig = false
         //https://stackoverflow.com/questions/63072764/android-packagebuildconfig-false-is-deprecated
         buildFeatures {
