--- a/restrainFileRedirect.gradle
+++ b/restrainFileRedirect.gradle
@@ -4,16 +4,18 @@
  * - In plugin 'com.android.internal.version-check' type 'com.android.build.gradle.internal.tasks.ListingFileRedirectTask' property 'listingFile'
  *   specifies file 'E:\AndroidProjects\shiyu\app\build\outputs\apk\pretest\output-metadata.json' which doesn't exist.
  * */
-if (gradle.gradleVersion.charAt(0) >= '7') {
-    applicationVariants.all { variant ->
-        if (variant.buildType.name != "debug") {
-            /*tasks.whenTaskAdded { task ->
-                if (task.name.contains("ListingFileRedirect")) {
+android {
+    if (gradle.gradleVersion.charAt(0) >= '7') {
+        applicationVariants.all { variant ->
+            if (variant.buildType.name != "debug") {
+                /*tasks.whenTaskAdded { task ->
+                    if (task.name.contains("ListingFileRedirect")) {
+                        task.enabled = false
+                    }
+                }*/
+                tasks.findAll { it.name.contains("ListingFileRedirect") }.forEach { task ->
                     task.enabled = false
                 }
-            }*/
-            tasks.findAll { it.name.contains("ListingFileRedirect") }.forEach { task ->
-                task.enabled = false
             }
         }
     }
