--- a/objectBrowser3.gradle
+++ b/objectBrowser3.gradle
@@ -11,6 +11,7 @@ dependencies {
     //数据库浏览 https://docs.objectbox.io/data-browser
     // 如果使用了浏览服务, 则在每个Module中都要使用`apply plugin: 'io.objectbox'`的地方, 都需要用下面的3条语句
     debugImplementation "io.objectbox:objectbox-android-objectbrowser:$objectboxVersion"
+    pretestImplementation "io.objectbox:objectbox-android-objectbrowser:$objectboxVersion"
     releaseImplementation "io.objectbox:objectbox-android:$objectboxVersion"
 
     //本地测试 https://docs.objectbox.io/android/android-local-unit-tests
