--- a/publish.gradle
+++ b/publish.gradle
@@ -28,21 +28,26 @@ def macRepo = project.hasProperty('libMacRepo') ? project.property('libMacRepo')
 
 afterEvaluate {
     publishing {
+        def ignore = new File(project.projectDir, ".nopublish").exists()
+        if (ignore) {
+            System.err.println("忽略Maven构建->" + project.name)
+        } else {
+            //产物收集配置
+            publications {
+                // Creates a Maven publication called "release".
 
-        //产物收集配置
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                // Applies the component for the release build variant.
-                from components.release
+                release(MavenPublication) {
+                    // Applies the component for the release build variant.
+                    from components.release
 
-                // You can then customize attributes of the publication as shown below.
-                groupId = libGroupId
-                artifactId = project.name
-                version = versionName
+                    // You can then customize attributes of the publication as shown below.
+                    groupId = libGroupId
+                    artifactId = project.name
+                    version = versionName
 
-                //artifact javadocJar
-                artifact sourcesJar
+                    //artifact javadocJar
+                    artifact sourcesJar
+                }
             }
         }
 
