--- a/apk.gradle
+++ b/apk.gradle
@@ -48,8 +48,14 @@ android {
             gv >= '7') {
         /*Gradle4.1 以上的方法*/
         applicationVariants.all { variant ->
-            def defPath = variant.packageApplicationProvider.get().outputDirectory.getAsFile().get().absolutePath
+            def defFolder = variant.packageApplicationProvider.get().outputDirectory.getAsFile().get()
+            def defPath = defFolder.absolutePath
             println "\napk.gradle ${gradleVersion}→默认输出目录↓\n${variant.name}-> ${defPath}"
+
+            defFolder.mkdirs()
+            def metadataFile = new File(defFolder, "output-metadata.json")
+            println metadataFile.absolutePath
+            metadataFile.createNewFile()
 
             if (variant.buildType.name != "debug") {
                 variant.packageApplicationProvider.get().outputDirectory = new File(apkFolder, variant.name)
@@ -193,5 +199,5 @@ gradle.buildFinished { buildResult -> /*BuildResult*/
             }
         }
     }
-    println "构建完毕->${buildResult.action}"
+    println "[apk.gradle]构建完毕->${buildResult.action}"
 }
