--- a/app.gradle
+++ b/app.gradle
@@ -65,8 +65,7 @@ android {
 
         //https://developer.android.com/studio/build/shrink-code?hl=zh-cn#groovy
         //resConfigs "zh", "xhdpi" //, "en"
-
-        buildConfigField "boolean", "SHOW_DEBUG", "false"
+        //buildConfigField "boolean", "SHOW_DEBUG", "false"
 
         //可以直接使用 ${applicationId}
 //        manifestPlaceholders = [
@@ -104,21 +103,20 @@ android {
         _dev {
             dimension "flavor"
             minSdkVersion Math.max(Integer.parseInt(_M_SDK), 21)
-            buildConfigField "boolean", "SHOW_DEBUG", "true"
-            resValue "bool", "show_debug", "true"
         }
         //preview
         pre {
+            //https://developer.android.com/studio/build/build-variants
+            //applicationIdSuffix ".pre"
+            //versionNameSuffix "-pre"
+            //applicationId "com.acc.xxx.pre"
             dimension "flavor"
             minSdkVersion Integer.parseInt(_M_SDK)
-            buildConfigField "boolean", "SHOW_DEBUG", "true"
-            resValue "bool", "show_debug", "true"
         }
         //apk
         apk {
             dimension "flavor"
             minSdkVersion Integer.parseInt(_M_SDK)
-            resValue "bool", "show_debug", "false"
         }
     }
     buildTypes {
@@ -136,11 +134,17 @@ android {
 
             ext.enableCrashlytics = false
             ext.alwaysUpdateBuildId = false
+
+            resValue "bool", "show_debug", "true"
         }
         pretest {
+            //https://developer.android.com/studio/build/build-variants
             //applicationIdSuffix ".pretest"
+            //manifestPlaceholders = [hostName:"internal.example.com"]
             initWith debug
             minifyEnabled _minify_enabled
+
+            resValue "bool", "show_debug", "true"
         }
         release {
             //applicationIdSuffix ".release"
@@ -149,6 +153,8 @@ android {
             debuggable false
             jniDebuggable = false
             crunchPngs = true
+
+            resValue "bool", "show_debug", "false"
         }
     }
 
