--- a/pgyer.gradle
+++ b/pgyer.gradle
@@ -72,6 +72,8 @@ buildscript {
     }
 }
 
+apply from: 'https://gitee.com/angcyo/gradle/raw/master/common.gradle'
+
 task _pgyerUpload(group: 'angcyo', description: '上传文件到蒲公英') {
     //upload("123.apk")
 }
